@@ -11,13 +11,14 @@ For more details, three sources are available according to type:
 
 Jython 2.7.3a1
   Bugs fixed
-    - [ GH-102 ] Fix CRC32.update calls in zlib.py
-    - [ GH-97 ] Failures in SNI support affecting pip
     - [ GH-150 ] Upgrade Netty to 4.1.73 (various CVEs)
     - [ GH-138 ] Upgrade Guava to 31.0.1 (CVE-2020-8908)
     - [ GH-139 ] Make gradlew executable on Unix/Mac
     - [ GH-119 ] array.array itemsize and serialisation anomalies for unsigned types
     - [ GH-122 ] Upgrade Apache commons-compress to 1.21
+    - [ GH-102 ] Fix CRC32.update calls in zlib.py
+    - [ GH-98 ] CVE-2019-9740: CRLF injection by url parameter
+    - [ GH-97 ] Failures in SNI support affecting pip
     - [ GH-57 ] JavaWebStart compatibility broken
     - [ GH-35 ] Travis CI on JDKs 8, 11, 13 and add Windows to OSes
     - [ GH-50 ] (First) migration from Mercurial corrupted project history
